[package]
name = "nthD_Matrix"
version = "0.0.6"
edition = "2021"

[lib]
name = "nd_matrix"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/integration_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
