[package]
name = "nthD_Matrix"
version = "0.0.9"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for using matrixes of any arbitrary size and dimension"


[lib]
name = "nd_matrix"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/integration_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
JamiesMiscLibrary = { git = "https://github.com/JamieH01/JamiesMiscLibrary", version = "0.0.6" }
device_query = "1.1.3"
